--- a/index.html
+++ b/index.html
@@ -124,6 +124,26 @@
                 </div>
                 <div class="project-row reverseWrap">
                     <div class="experience-flex">
+                        <h3>CodeAPI</h3>
+                        <p>Online code execution API that allows users to submit code snippets in various programming
+                            languages and get the output and/or results of the execution.</p>
+                        <p>Features:
+                            <ol >
+                                <li className="text-left">User Registration and Authentication</li>
+                                <li>Code Submission</li>
+                                <li>Code Execution in a secured sandbox</li>
+                                <li>Retrieving Code Submissions, Real-time Notifications</li>
+                            </ol>
+                        </p>
+                        <p>Check out this project: <a href="https://github.com/AnshikaGusain/codeAPI"
+                                target="blank">Click
+                                Here</a></p>
+                    </div>
+                    <img class="todo img-fluid" src="images/api.png" alt="">
+                </div>
+                <div class="project-row">
+                    <img class="todo img-fluid" src="images/todo.png" alt="">
+                    <div class="experience-flex">
                         <h3>ToDos</h3>
                         <p>I worked on a project that allows users to create, manipulate, delete, and store their to-do
                             items in different lists. To enhance flexibility, I employed my knowledge of EJS (Embedded
@@ -134,10 +154,8 @@
                         <p>Check out this project: <a href="https://todolist-ay8c.onrender.com/" target="blank">Click
                                 Here</a></p>
                     </div>
-                    <img class="todo img-fluid" src="images/todo.png" alt="">
                 </div>
-                <div class="project-row">
-                    <img class="ENotes img-fluid" src="images/ENotes.png" alt="">
+                <div class="project-row reverseWrap">
                     <div class="experience-flex">
                         <h3>E-Notes</h3>
                         <p>I developed a project similar to a mobile Keep notes application, which allows users to store
@@ -147,11 +165,13 @@
                             making the note-taking experience seamless and visually appealing.
                         </p>
                     </div>
+                    <img class="ENotes img-fluid" src="images/ENotes.png" alt="">
                 </div>
 
-                <div class="project-row reverseWrap">
+                <div class="project-row">
+                    <img class="text img-fluid" src="images/text.png" alt="">
                     <div class="experience-flex">
-                        <h3>Text_manipulator</h3>
+                        <h3>WordWise</h3>
                         <p>I created a project using ReactJS that focuses on text manipulation functionalities. Users
                             can perform various actions on the text, such as formatting, editing, and manipulating its
                             content. To make the project accessible online, I deployed it using gh-pages, which allows
@@ -161,8 +181,8 @@
                         <p>Check out this project: <a href="https://anshikagusain.github.io/Text_Manipulator/"
                                 target="blank">Click Here</a></p>
                     </div>
-                    <img class="text img-fluid" src="images/text.png" alt="">
                 </div>
+
             </div>
             <hr>
             <div class="experience">
@@ -173,14 +193,22 @@
 
                     <div class="experience-flex">
                         <h3>Full Stack Web Development Intern</h3>
-                        <p>As a Full Stack Web Development Intern, I successfully built a dynamic website. I efficiently handled website data by utilizing a PostgreSQL database hosted on the AWS RDS service. To make the website accessible, I deployed the front-end on Firebase and the back-end on Render. Throughout the development process, I employed various technologies such as HTML, CSS, JavaScript, ReactJS, Bootstrap, Node.js with Express, and PostgreSQL. This comprehensive tech stack enabled me to create a fully functional and responsive website with robust front-end and back-end capabilities.
+                        <p>As a Full Stack Web Development Intern, I successfully built a dynamic website. I efficiently
+                            handled website data by utilizing a PostgreSQL database hosted on the AWS RDS service. To
+                            make the website accessible, I deployed the front-end on Firebase and the back-end on
+                            Render. Throughout the development process, I employed various technologies such as HTML,
+                            CSS, JavaScript, ReactJS, Bootstrap, Node.js with Express, and PostgreSQL. This
+                            comprehensive tech stack enabled me to create a fully functional and responsive website with
+                            robust front-end and back-end capabilities.
                         </p>
                     </div>
                 </div>
                 <div class="experience-row reverseWrap">
                     <div class="experience-flex">
                         <h3>Web Development Intern</h3>
-                        <p>During this internship, I honed my skills in HTML, CSS, JavaScript, Bootstrap, and version control tools like Git. I actively participated in developing the front end of a dynamic website and learned how to effectively debug code and write clean, maintainable code.
+                        <p>During this internship, I honed my skills in HTML, CSS, JavaScript, Bootstrap, and version
+                            control tools like Git. I actively participated in developing the front end of a dynamic
+                            website and learned how to effectively debug code and write clean, maintainable code.
                         </p>
                     </div>
                     <img class="front-end img-fluid" src="images/front-end.png" alt="">
