--- a/index.html
+++ b/index.html
@@ -80,12 +80,13 @@
                         <h3>Databases</h3>
                         <p>I gained knowledge about databases and how to work with them. Since then, I have applied my
                             skills in various databases through internships and personal projects. The databases I have
-                            worked with include:</p>
+                            worked with include:
                         <ul>
                             <li>MySql</li>
                             <li>PostgreSQL</li>
                             <li>Mongodb</li>
                         </ul>
+                    </p>
                     </div>
                 </div>
                 <div class="skill-row">
