--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
                             resources. I find the process fascinating and have been gradually building my skills from
                             various platforms. I intend to continue expanding my knowledge in website development.</p>
                         <ul>
+                            <li>HTML, CSS</li>
                             <li>ReactJs</li>
                             <li>Express</li>
                             <li>Mongoose</li>
                             <li>EJS</li>
+                            <li>NextJS</li>
+                            <li>NodeJs</li>
                         </ul>
                     </div>
                 </div>
@@ -66,9 +69,10 @@
                         <p>Worked with the following:</p>
                         <ul>
                             <li>C/C++</li>
-                            <li>HTML, CSS</li>
+                            
                             <li>JavaScript</li>
-                            <li>NodeJs</li>
+                            <li>TypeScript</li>
+                            
                             <li>Python</li>
                         </ul>
                     </div>
